fix(Experience): adjusts title on contrast modegst

--- a/components/sections/Experience/Experience.module.css
+++ b/components/sections/Experience/Experience.module.css
@@ -37,6 +37,10 @@
   text-transform: uppercase;
 }
 
+.title.contrast {
+  color: var(--theme-background);
+}
+
 .card {
   position: relative;
   margin: 0 auto;
